--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
+sudo: required
+
 language: go
 
 go:
-  - 1.15
+  - "1.15"
 
 script:
   - go test -v ./...
 
+after_success:
+  - docker --version
+  - pip install --user awscli
+  - export PATH=$PATH:$HOME/.local/bin
+  - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
+  - LAST_COMMIT_SHA = $(shell git rev-parse --short HEAD)
+  - make build-image
+  - docker tag agora:latest $AWS_ECR_URL/agora:latest
+  - docker tag agora:latest $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
+  - docker push $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
+  - docker push $AWS_ECR_URL/agora:latest
