--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,29 @@
-sudo: required
+dist: bionic
+
+os: linux
 
 language: go
 
 go:
   - "1.15"
 
+before_install:
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+
 script:
   - go test -v ./...
 
 after_success:
   - docker --version
+  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+  - sudo service docker restart
   - pip install --user awscli
   - export PATH=$PATH:$HOME/.local/bin
   - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
-  - LAST_COMMIT_SHA = $(shell git rev-parse --short HEAD)
+  - LAST_COMMIT_SHA = $(git rev-parse --short HEAD)
   - make build-image
   - docker tag agora:latest $AWS_ECR_URL/agora:latest
   - docker tag agora:latest $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
