--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
 script:
-  - go test -v ./...
+  - make unit-test
 
 after_success:
   - docker --version
@@ -23,7 +23,7 @@ after_success:
   - pip install --user awscli
   - export PATH=$PATH:$HOME/.local/bin
   - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
-  - LAST_COMMIT_SHA = $(git rev-parse --short HEAD)
+  - LAST_COMMIT_SHA=$(git rev-parse --short HEAD)
   - make build-image
   - docker tag agora:latest $AWS_ECR_URL/agora:latest
   - docker tag agora:latest $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
