--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,24 @@
-dist: bionic
+dist: focal
 
 os: linux
 
 language: go
 
+services:
+  - docker
+
 go:
   - "1.15"
 
-before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+before_script:
+  - docker --version
+  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
+  - sudo service docker restart
 
 script:
   - make unit-test
 
 after_success:
-  - docker --version
-  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
-  - sudo service docker restart
   - pip install --user awscli
   - export PATH=$PATH:$HOME/.local/bin
   - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
