--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -16,17 +16,17 @@ services:
       timeout: 5s
       retries: 10
   migrate:
-    image: migrate/migrate:latest
+    image: agora-migrate:latest
     networks:
       - new
-    volumes:
-      - ./migrations:/migrations
-    command: ["-path", "/migrations", "-database", "mysql://root:password@tcp(database:3306)/agora", "up"]
+    build: ./migrations
     links:
       - db
     depends_on: 
       db:
         condition: service_healthy
+    environment: 
+      - DATABASE_CONNECTION_URL=mysql://root:password@tcp(database:3306)/agora
 networks:
   new:
   
