--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,25 @@ jobs:
   include:
     - stage: test
       script: make unit-test
-    - stage: build-image
+
+    - stage: build-image-dev
+      before_script:
+        - pip install --user awscli
+        - export PATH=$PATH:$HOME/.local/bin
+        - LAST_COMMIT_SHA=$(git rev-parse --short HEAD)
+        - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
+      script:
+        - make build-image
+        - docker tag agora:latest $AWS_ECR_URL/agora-develop:latest
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-develop:latest
+        - docker tag agora:latest $AWS_ECR_URL/agora-develop:$LAST_COMMIT_SHA
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-develop:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-develop:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-migrate-develop:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-develop:latest
+        - docker push $AWS_ECR_URL/agora-migrate-develop:latest
+
+    - stage: build-image-main
       before_script:
         - pip install --user awscli
         - export PATH=$PATH:$HOME/.local/bin
@@ -25,14 +43,58 @@ jobs:
         - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
       script:
         - make build-image
+        - docker tag agora:latest $AWS_ECR_URL/agora:$TAG
         - docker tag agora:latest $AWS_ECR_URL/agora:latest
-        - docker tag agora:latest $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
-        - if [[ ${TAG} != "" ]]; then docker tag agora:latest $AWS_ECR_URL/agora:$TAG; fi;
-        - docker push $AWS_ECR_URL/agora:$LAST_COMMIT_SHA
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate:$TAG
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate:latest
+        - docker push $AWS_ECR_URL/agora:$TAG
+        - docker push $AWS_ECR_URL/agora-migrate:$TAG
         - docker push $AWS_ECR_URL/agora:latest
-        - if [[ ${TAG} != "" ]]; then docker push $AWS_ECR_URL/agora:$TAG; fi;
+        - docker push $AWS_ECR_URL/agora-migrate:latest
+
+    - stage: build-image-release
+      before_script:
+        - pip install --user awscli
+        - export PATH=$PATH:$HOME/.local/bin
+        - LAST_COMMIT_SHA=$(git rev-parse --short HEAD)
+        - TAG=$(git tag --points-at HEAD)
+        - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
+      script:
+        - make build-image
+        - docker tag agora:latest $AWS_ECR_URL/agora-release:latest
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-release:latest
+        - docker tag agora:latest $AWS_ECR_URL/agora-release:$LAST_COMMIT_SHA
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-release:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-release:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-migrate-release:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-release:latest
+        - docker push $AWS_ECR_URL/agora-migrate-release:latest
+
+    - stage: build-image-hotfix
+      before_script:
+        - pip install --user awscli
+        - export PATH=$PATH:$HOME/.local/bin
+        - LAST_COMMIT_SHA=$(git rev-parse --short HEAD)
+        - TAG=$(git tag --points-at HEAD)
+        - aws ecr get-login-password --region $AWS_ECR_REGION | docker login --username AWS --password-stdin $AWS_ECR_URL
+      script:
+        - make build-image
+        - docker tag agora:latest $AWS_ECR_URL/agora-hotfix:latest
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-hotfix:latest
+        - docker tag agora:latest $AWS_ECR_URL/agora-hotfix:$LAST_COMMIT_SHA
+        - docker tag agora-migrate:latest $AWS_ECR_URL/agora-migrate-hotfix:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-hotfix:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-migrate-hotfix:$LAST_COMMIT_SHA
+        - docker push $AWS_ECR_URL/agora-hotfix:latest
+        - docker push $AWS_ECR_URL/agora-migrate-hotfix:latest
 
 stages:
   - test
-  - name: build-image
-    if: branch IN (develop, main) AND type=push
+  - name: build-image-dev
+    if: branch = develop AND type=push
+  - name: build-image-release
+    if: branch =~ ^(release\/)[0-9A-Za-z]+$
+  - name: build-image-main
+    if: branch = main AND type=push AND tag IS present
+  - name: build-image-hotfix
+    if: branch =~ ^(hotfix\/)[0-9A-Za-z]+$
