--- a/database/migrations/Dockerfile
+++ b/database/migrations/Dockerfile
@@ -3,4 +3,4 @@ FROM migrate/migrate
 COPY .  /migrations
 
 ENTRYPOINT [ "" ]
-CMD ["sh", "-c", "migrate -path=/migrations -database ${DATABASE_CONNECTION_URL} up"]
+CMD ["/bin/sh", "/migrations/migrate.sh"]
