Fix same site cookie bug
Add staging environment.

The dev environment will set all cookies same-site to lax and not secure.

The staging environment will set all cookies same-site to none and
secure.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -24,7 +24,7 @@ api:
       allowed:
 # This is the environment the application should run in. This controls
 # various things but mainly logging levels. Valid values for this property
-# are 'dev' or 'prod'.
+# are 'dev', 'prod', or 'staging'.
 environment:
 jwtservice:
   # This is the duration of the JWT token that is issued when using the 
